--- a/package.json
+++ b/package.json
@@ -11,8 +11,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "es6-promise": "4.1.1",
+    "immutable": "^3.8.2",
+    "isomorphic-unfetch": "2.0.0",
     "next": "^3.2.2",
+    "next-redux-saga": "1.0.1",
+    "next-redux-wrapper": "1.2.0",
     "react": "^15.6.2",
-    "react-dom": "^15.6.2"
+    "react-dom": "^15.6.2",
+    "react-redux": "5.0.5",
+    "redux": "3.7.2",
+    "redux-saga": "0.15.4",
+    "reduxsauce": "^0.7.0"
+  },
+  "devDepencies": {
+    "redux-devtools-extension": "2.15.0"
+  },
+  "devDependencies": {
+    "redux-devtools-extension": "^2.13.2"
   }
 }
