--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "es6-promise": "4.1.1",
     "immutable": "^3.8.2",
     "isomorphic-unfetch": "2.0.0",
+    "moment": "^2.19.4",
     "next": "^3.2.2",
     "next-redux-saga": "1.0.1",
     "next-redux-wrapper": "1.2.0",
@@ -22,7 +23,9 @@
     "react-redux": "5.0.5",
     "redux": "3.7.2",
     "redux-saga": "0.15.4",
-    "reduxsauce": "^0.7.0"
+    "reduxsauce": "^0.7.0",
+    "reselect": "^3.0.1",
+    "styled-components": "^2.3.0"
   },
   "devDepencies": {
     "redux-devtools-extension": "2.15.0"
