--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-redux-wrapper": "1.2.0",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
+    "react-intl": "^2.4.0",
     "react-redux": "5.0.5",
     "redux": "3.7.2",
     "redux-saga": "0.15.4",
