--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-plugin-styled-components": "^1.3.0",
     "es6-promise": "4.1.1",
     "immutable": "^3.8.2",
     "isomorphic-unfetch": "2.0.0",
