--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "babel-plugin-styled-components": "^1.3.0",
     "es6-promise": "4.1.1",
+    "etcd3": "^0.2.6",
     "immutable": "^3.8.2",
     "isomorphic-unfetch": "2.0.0",
     "moment": "^2.19.4",
