--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
     "react-intl": "^2.4.0",
+    "react-motion": "^0.5.2",
     "react-redux": "5.0.5",
+    "react-rotating-text": "^1.2.1",
     "redux": "3.7.2",
     "redux-saga": "0.15.4",
     "reduxsauce": "^0.7.0",
